Remerge and refactoring for class instances

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
 nb-chat {
   width: 100%;
   }
+
+  .nospace {
+    position: absolute;
+    bottom: 0px;
+    margin-top: -10px;
+    margin-left: -10px;
+    font-size: 7em;
+  }
