--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,7 @@ body.jw-modal-open {
   /* body overflow is hidden to hide main scrollbar when modal window is open */
   overflow: hidden;
 }
+
+.modinput {
+  margin-bottom:  10px;
+}
