--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ app-jw-modal {
       left: 0;
 
 
+
       /* z-index must be higher than .jw-modal-background */
       z-index: 1000;
 
@@ -31,6 +32,8 @@ app-jw-modal {
     position: fixed;
     top: 50px;
     background: none;
+    max-height: 70vh;
+    overflow: hidden;
 
     /* margin exposes part of the modal background */
     margin: 40px;
